2019-10-02  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Stop using legacy custom protocol implementation
        https://bugs.webkit.org/show_bug.cgi?id=202407

        Reviewed by Žan Doberšek.

        Remove the code to setup custom protocols in soup session.

        * platform/network/soup/SoupNetworkSession.cpp:
        (WebCore::SoupNetworkSession::SoupNetworkSession):
        * platform/network/soup/SoupNetworkSession.h:

2021-06-16  Chris Dumez  <cdumez@apple.com>

        Protect Element before calling dispatchMouseEvent() on it
        https://bugs.webkit.org/show_bug.cgi?id=226767
        <rdar://problem/79009112>

        Reviewed by Ryosuke Niwa.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::updateMouseEventTargetNode):
        (WebCore::EventHandler::dispatchMouseEvent):
        * page/PointerLockController.cpp:
        (WebCore::PointerLockController::dispatchLockedMouseEvent):
        * page/Quirks.cpp:
        (WebCore::Quirks::triggerOptionalStorageAccessQuirk const):

2020-02-28  Chris Dumez  <cdumez@apple.com>

        Garbage collection prevents FontFace.loaded promise from getting resolved
        https://bugs.webkit.org/show_bug.cgi?id=208382

        Reviewed by Ryosuke Niwa.

        Make sure the FontFace JS wrapper stays alive long enough to resolve the
        loaded promise when it is observable by the page's script.

        Test: fast/text/font-promises-gc.html

        * css/CSSFontFace.cpp:
        (WebCore::CSSFontFace::document const):
        * css/CSSFontFace.h:
        * css/FontFace.cpp:
        (WebCore::FontFace::FontFace):
        (WebCore::FontFace::fontStateChanged):
        (WebCore::FontFace::loadForBindings):
        (WebCore::FontFace::loadedForBindings):
        (WebCore::FontFace::activeDOMObjectName const):
        (WebCore::FontFace::hasPendingActivity const):
        (WebCore::FontFace::load): Deleted.
        * css/FontFace.h:
        * css/FontFace.idl:
