@@ -37,7 +37,6 @@ platform/network/soup/ResourceResponseSoup.cpp
 platform/network/soup/SocketStreamHandleImplSoup.cpp
 platform/network/soup/SoupNetworkSession.cpp
 platform/network/soup/SynchronousLoaderClientSoup.cpp
-platform/network/soup/WebKitSoupRequestGeneric.cpp
 platform/network/soup/gwildcardproxyresolver.c
 
 platform/soup/PublicSuffixSoup.cpp
