@@ -38,15 +38,6 @@ OBJC_CLASS NSURLSessionConfiguration;
 OBJC_CLASS WKCustomProtocol;
 #endif
 
-#if USE(SOUP)
-#include <wtf/glib/GRefPtr.h>
-
-typedef struct _GCancellable GCancellable;
-typedef struct _GInputStream GInputStream;
-typedef struct _GTask GTask;
-typedef struct _WebKitSoupRequestGeneric WebKitSoupRequestGeneric;
-#endif
-
 namespace IPC {
 class DataReference;
 } // namespace IPC
@@ -75,18 +66,6 @@ public:
 
 #if PLATFORM(COCOA)
     typedef RetainPtr<WKCustomProtocol> CustomProtocol;
-#endif
-#if USE(SOUP)
-    struct WebSoupRequestAsyncData {
-        WebSoupRequestAsyncData(GRefPtr<GTask>&&, WebKitSoupRequestGeneric*);
-        ~WebSoupRequestAsyncData();
-
-        GRefPtr<GTask> task;
-        WebKitSoupRequestGeneric* request;
-        GRefPtr<GCancellable> cancellable;
-        GRefPtr<GInputStream> stream;
-    };
-    typedef std::unique_ptr<WebSoupRequestAsyncData> CustomProtocol;
 #endif
 
     uint64_t addCustomProtocol(CustomProtocol&&);
@@ -126,10 +105,6 @@ private:
     // WKCustomProtocol objects can be removed from the m_customProtocolMap from multiple threads.
     // We return a RetainPtr here because it is unsafe to return a raw pointer since the object might immediately be destroyed from a different thread.
     RetainPtr<WKCustomProtocol> protocolForID(uint64_t customProtocolID);
-#endif
-
-#if USE(SOUP)
-    GRefPtr<GPtrArray> m_registeredSchemes;
 #endif
 };
 
